"npm pnpm update and updated with latest projects"

--- a/public/content/projects/comedify.mdx
+++ b/public/content/projects/comedify.mdx
@@ -1,60 +1,43 @@
 ---
-title: "Comedify"
-description: "Comedify is a creative and interactive Next.js application, featuring ComicBot, an AI-driven conversational chatbot tailored for humor and entertainment. Ideal for comedy enthusiasts and professionals alike, Comedify offers a platform to test out jokes or engage in witty banter."
-url: "https://comedify-54274.web.app"
-date: "2024-02-10"
+title: The Humor Hub
+description: Your ultimate comedy platform combining MicFinder, Comedify, and the custom Comicbot for an unparalleled comedy experience.
+date: "2024-05-29"
+url: https://thehumorhub.com
+published: true
+repository: "njwright92/humorhub1"
 ---
 
-## Play with it at [Comedify](https://comedify-54274.web.app).
+# The Humor Hub
 
-## Features
+Welcome to The Humor Hub! Your one-stop platform for all things comedy. The Humor Hub combines the best features of MicFinder and Comedify, along with our custom Comicbot to bring you an unparalleled comedy experience.
 
-- ComicBot: An AI-powered chatbot designed for delivering and receiving humor. Whether you're a budding comedian or just looking for a laugh, ComicBot is your go-to virtual humor partner.
+## Key Features
 
-- Jokes & Bits Library: A comprehensive repository where users can contribute, access, and enjoy a wide array of jokes and comedic bits.
-  Getting Started
+### Comicbot
 
-To get your local version of Comedify up and running, follow these steps:
+Comicbot is our custom-built, uncensored, unfiltered comedy-trained language model. It's designed to help comedians generate new material, refine their jokes, and explore different comedic styles.
 
-Prerequisites
+### Jokepad
 
-- Node.js
-- Firebase account
+Jokepad is an innovative tool for editing and refining jokes. It provides suggestions, grammar checks, and stylistic improvements to help you perfect your punchlines.
 
-## Installation Guide
+### MicFinder
 
-Clone the repository:
+MicFinder helps you locate open mics near you with detailed maps and event information. Never miss an opportunity to perform!
 
-git clone https://github.com/njwright92/comedify.git
+### News API
 
-Enter the project directory:
+Stay updated with the latest news for joke material. Our API fetches the latest headlines, ensuring you always have fresh topics to joke about.
 
-cd comedify
+## Technologies Used
 
-Install the necessary dependencies:
+- **Frontend:** React, Tailwind CSS
+- **Backend:** Node.js, Express.js
+- **Deployment:** Vercel
+- **API Integration:** REST APIs
 
-npm install
+## Get Involved
 
-Configure Firebase Firestore and update firebase.js with your Firebase configuration details.
+Join our community of comedians and comedy enthusiasts. Whether you're a seasoned pro or just starting out, The Humor Hub has something for everyone.
 
-Launch the development server:
-
-npm run dev
-
-## Usage Instructions
-
-ComicBot: Visit the ComicBot section on the app to start an engaging conversation with the AI chatbot.
-
-Jokes & Bits: Use this section to add new material or browse through the existing collection of jokes and bits.
-
-## Technology Stack
-
-- Frontend: React, Next.js
-- Backend: Node.js, Firebase Firestore for data storage
-- Styling: Tailwind CSS, AOS for animations
-- Linting: ESLint
-- Version Control: Git
-
-Deployment
-
-Comedify is deployable on platforms like Vercel. For more details on deploying Next.js applications, refer to the Next.js deployment documentation.
+Visit us at [thehumorhub.com](https://thehumorhub.com).
