--- a/public/content/projects/proTracker.mdx
+++ b/public/content/projects/proTracker.mdx
@@ -1,78 +1,50 @@
 ---
-title: "ProTracker"
-description: "Protracker is a React Native production tracking app!"
-url: "https://nativeprotracker.com"
-date: "2024-02-10"
+title: Nate's Portfolio
+description: Showcasing Nate's web development projects and skills in a visually engaging manner.
+date: "2024-05-29"
+url: https://njwright92.github.io/paper-kit-portfolio
+published: true
+repository: "njwright92/paper-kit-portfolio"
 ---
 
-[![Native Pro Tracker Logo](../../Branding.webp)](https://nativeprotracker.com/)
+# Nate's Portfolio
 
-## About
+![Portfolio Banner](https://njwright92.github.io/paper-kit-portfolio/images/banner.jpg)
 
-Presenting **Native Pro Tracker**, a technologically sophisticated, yet user-friendly full-stack mobile application. Developed using an intricate blend of Expo-React Native, Redux, Firebase, and Firestore, this powerful tool excels in tracking and managing a plethora of tasks and activities. The primary focus lies on product tracking, allowing users to record items via custom naming, date, and quantity.
+Welcome to my portfolio! I'm Nate, a recent full-stack web development graduate with a passion for creating innovative web applications. Check out some of my projects below.
 
-Harnessing the potential of full-stack CRUD operations, the app facilitates the effortless creation of new products, providing the ability to view, update, and delete existing entries as required. Leveraging a responsive design architecture, compatibility is ensured across an array of devices, from smartphones and tablets to laptops and desktops. The accessibility and flexibility it offers make it an ideal companion for those seeking a streamlined solution to stay organized in our fast-paced world.
+## Projects
 
-Whether it's managing your inventory, overseeing daily tasks, or coordinating personal projects, **Native Pro Tracker** stands as a versatile and readily accessible platform catering to a multitude of tracking needs. It exemplifies a perfect blend of advanced technology made simple, reminiscent of the ingenuity seen in Apple developments.
+### The Humor Hub
 
-## Features
+A comprehensive comedy platform that merges MicFinder and Comedify, featuring the custom Comicbot. It includes Jokepad for joke editing and MicFinder for locating open mics.
 
-- Custom domain with Namecheap.
-- Backend hosted with Firebase.
-- Real-time database and authentication with Firebase.
-- Frontend built with Expo-React Native and Redux.
-- Frontend hosted by Google GKE cluster with a Docker Image.
-- Responsive design for mobile and web platforms.
-- Data visualization with React Native Chart Kit.
-- Dynamic list for adding, editing, and deleting products with quantity and date entries.
-- Track production progress with interactive line charts.
-- Snapshot feature for generating weekly, monthly, and yearly production reports.
-- Google Analytics integration for tracking user traffic.
+- **Technologies:** React, Tailwind CSS, Node.js, Express.js, Vercel
+- **Link:** [thehumorhub.com](https://thehumorhub.com)
 
-## Installation
+### Flora's Weddings
 
-1. Clone the repository:
+A visually stunning, responsive website for a local florist. Built with Next.js and deployed on Vercel, it features elegant wedding galleries and interactive user features.
 
-   git clone https://github.com/njwright92/nativeprotracker.git
+- **Technologies:** Next.js, Vercel
+- **Link:** [florasweddings.com](https://florasweddings.com)
 
-Install dependencies:
+### Humor Hub News
 
-- npm install
+A news aggregator that fetches the latest headlines for comedians to find fresh joke material. Integrated with REST APIs for real-time updates.
 
-Start the development server:
+- **Technologies:** React, REST APIs
+- **Link:** [Humor Hub News](https://thehumorhub.com/news)
 
-- npm run start
+## Skills
 
-Built With
+- **Programming Languages & Frameworks:** HTML5, CSS3, JavaScript, jQuery, Bootstrap, React, ReactNative, Node.js, Express.js, JSX, Python
+- **Databases/Cloud Infrastructures:** GCP, Firebase, Firestore, AWS
+- **Version Control & Development Tools:** GIT, GitHub, VS Code, Linux CLI (Ubuntu)
+- **Technical Skills:** Responsive Web Development, REST APIs Integration, UI/UX Design
 
-- Expo: Cross-platform framework for mobile app development.
-- React: A JavaScript library for building user interfaces.
-- React-Native: A framework for building native mobile apps using React.
-- Redux: State management library.
-- Firebase: Backend services for authentication and real-time database.
-- Firestore: Scalable NoSQL cloud database.
+## About Me
 
-## Dependencies
+I'm a 31-year-old aspiring web developer based in Coeur d'Alene, Idaho. When I'm not coding, you can find me performing stand-up comedy, snowboarding, or playing music. My goal is to land a web developer job and continue to grow my skills in both tech and comedy.
 
-A full list of dependencies can be found in the package.json file. Some of the key dependencies include:
-
-- expo
-- firebase
-- formik
-- react
-- react-native-community
-- react-native-elements
-- react-native-vector-icons
-- react-navigation
-- redux
-- reduxjs/toolkit
-- yup
-
-## Acknowledgments
-
-This app was developed by me, Nathan Wright. Shoutout to Jeff, Delilah, Pat, Uriel, and Nick for the help. If you have any questions or feedback about this app, please send me an email at [njwright92@gmail.com]. P.S. NuCamp Coding Bootcamp gave me the structure needed to learn the Expo platform.
-
-### License
-
-This app is licensed under the MIT License.
-© Nate Wright
+Check out my portfolio at [njwright92.github.io/paper-kit-portfolio](https://njwright92.github.io/paper-kit-portfolio).
