--- a/public/content/projects/proTracker.mdx
+++ b/public/content/projects/proTracker.mdx
@@ -45,6 +45,6 @@ A news aggregator that fetches the latest headlines for comedians to find fresh 
 
 ## About Me
 
-I'm a 31-year-old aspiring web developer based in Coeur d'Alene, Idaho. When I'm not coding, you can find me performing stand-up comedy, snowboarding, or playing music. My goal is to land a web developer job and continue to grow my skills in both tech and comedy.
+I'm an aspiring web developer based in Coeur d'Alene, Idaho. When I'm not coding, you can find me performing stand-up comedy, snowboarding, or playing music. My goal is to land a web developer job and continue to grow my skills in both tech and comedy.
 
 Check out my portfolio at [njwright92.github.io/paper-kit-portfolio](https://njwright92.github.io/paper-kit-portfolio).
