"npm and pnpm updates"

--- a/public/content/projects/comedify.mdx
+++ b/public/content/projects/comedify.mdx
@@ -2,7 +2,7 @@
 title: The Humor Hub
 description: Your ultimate comedy platform combining MicFinder, Comedify, and the custom Comicbot for an unparalleled comedy experience.
 date: "2024-05-29"
-url: https://thehumorhub.com
+url: https://www.thehumorhub.com
 published: true
 repository: "njwright92/humorhub1"
 ---
