"update packages migrate to next 16 react 19.2.1 and tailwin 4 update projects links"

--- a/public/content/projects/floras.mdx
+++ b/public/content/projects/floras.mdx
@@ -3,11 +3,9 @@ title: Floras Weddings
 description: A sophisticated and elegant online destination for all your wedding floristry needs, powered by Next.js.
 date: "2024-01-05"
 url: https://www.florasweddings.com
+repository: njwright92/florasweddings
 published: true
-repository: "njwright92/florasweddings"
 ---
-
-[![Floras Weddings](../../flora.png)](https://www.florasweddings.com/)
 
 Welcome to the official repository for Floras Weddings, a sophisticated and elegant online destination catering to all your wedding floristry needs. Powered by Next.js, this website is a digital showcase of our exquisite floral arrangements and designs, each uniquely crafted to add elegance to your special day.
 
@@ -28,12 +26,6 @@ Built with Next.js, our website represents the power and flexibility of modern w
 ## Technical Stack & Dependencies
 
 "Floras Weddings" leverages a contemporary web development stack, as outlined in our package.json file.
-
-## Core Technologies
-
-- Next.js: 14.1.0
-- React: 18.2.0
-- React-DOM: 18.2.0
 
 ## Deployment and Updates
 
