--- a/public/content/projects/humorhub.mdx
+++ b/public/content/projects/humorhub.mdx
@@ -3,8 +3,8 @@ title: The Humor Hub
 description: Your ultimate comedy platform combining MicFinder, Comedify, and the custom Comicbot for an unparalleled comedy experience.
 date: "2024-05-29"
 url: https://www.thehumorhub.com
+repository: njwright92/humorhub1
 published: true
-repository: "njwright92/humorhub1"
 ---
 
 # The Humor Hub
