--- a/public/content/projects/portfolio.mdx
+++ b/public/content/projects/portfolio.mdx
@@ -3,8 +3,8 @@ title: Nate's Portfolio
 description: Showcasing Nate's web development projects and skills in a visually engaging manner.
 date: "2024-05-29"
 url: https://njwright92.github.io/paper-kit-portfolio
+repository: njwright92/paper-kit-portfolio
 published: true
-repository: "njwright92/paper-kit-portfolio"
 ---
 
 # Nate's Portfolio
